[MATRIX-154] remove ai functions implementations (#887)
* Remove ai functions implementations, as the code is not used any more.